Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-109940

[REG 6.4.2->6.5/6.0] serialbus modbus examples not compiling on iOS

XMLWordPrintable

    • iOS/tvOS/watchOS
    • cc12e9055 (dev), 4e44412cd (6.5), 58e8f141e (6.4)

      Install Qt 6.5.0 beta1 or Qt 6.6.0 (dev snapshot) iOS binaries and QtSerialBus. Try to compile example serialbus/modbus/server:

      6.6.0/ios/bin/qt-cmake -S /Users/qt/RTA/Qt_6.6.0/Examples/Qt-6.6.0/serialbus/modbus/server -B /Users/qt/RTA/Qt_6.6.0/Examples/Qt-6.6.0/serialbus/modbus/server/bld_ios -GNinja 

      Finishes fine, but compile fails:

      Run cmake --build . --parallel in /Users/qt/RTA/Qt_6.6.0/Examples/Qt-6.6.0/serialbus/modbus/server/bld_ios
      [1/9] Copying OS X Content modbusserver.app/LaunchScreen.storyboard
      [2/9] Automatic MOC and UIC for target modbusserver
      [3/9] Running rcc for resource server
      [4/9] Building CXX object CMakeFiles/modbusserver.dir/bld_ios/.rcc/qrc_server.cpp.o
      [5/9] Building CXX object CMakeFiles/modbusserver.dir/main.cpp.o
      [6/9] Building CXX object CMakeFiles/modbusserver.dir/modbusserver_autogen/mocs_compilation.cpp.o
      [7/9] Building CXX object CMakeFiles/modbusserver.dir/settingsdialog.cpp.o
      [8/9] Building CXX object CMakeFiles/modbusserver.dir/mainwindow.cpp.o
      FAILED: CMakeFiles/modbusserver.dir/mainwindow.cpp.o 
      /Applications/Xcode14.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/c++ -DQT_CORE_LIB -DQT_GUI_LIB -DQT_NETWORK_LIB -DQT_NO_DEBUG -DQT_SERIALBUS_LIB -DQT_WIDGETS_LIB -I/Users/qt/RTA/Qt_6.6.0/Examples/Qt-6.6.0/serialbus/modbus/server/bld_ios/modbusserver_autogen/include -isystem /Users/qt/RTA/Qt_6.6.0/6.6.0/ios/include/QtCore -isystem /Users/qt/RTA/Qt_6.6.0/6.6.0/ios/include -isystem /Users/qt/RTA/Qt_6.6.0/6.6.0/ios/mkspecs/macx-ios-clang -isystem /Users/qt/RTA/Qt_6.6.0/6.6.0/ios/include/QtGui -isystem /Users/qt/RTA/Qt_6.6.0/6.6.0/ios/include/QtNetwork -isystem /Users/qt/RTA/Qt_6.6.0/6.6.0/ios/include/QtSerialBus -isystem /Users/qt/RTA/Qt_6.6.0/6.6.0/ios/include/QtWidgets -arch arm64 -isysroot /Applications/Xcode14.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS16.2.sdk -miphoneos-version-min=14.0 -std=gnu++17 -MD -MT CMakeFiles/modbusserver.dir/mainwindow.cpp.o -MF CMakeFiles/modbusserver.dir/mainwindow.cpp.o.d -o CMakeFiles/modbusserver.dir/mainwindow.cpp.o -c /Users/qt/RTA/Qt_6.6.0/Examples/Qt-6.6.0/serialbus/modbus/server/mainwindow.cpp
      /Users/qt/RTA/Qt_6.6.0/Examples/Qt-6.6.0/serialbus/modbus/server/mainwindow.cpp:8:10: fatal error: 'QModbusRtuSerialServer' file not found
      #include <QModbusRtuSerialServer>
               ^~~~~~~~~~~~~~~~~~~~~~~~
      1 error generated.
      ninja: build stopped: subcommand failed. 

      Same with serialbus/modbus/custom.

      serialbus/can compiles fine.

        For Gerrit Dashboard: QTBUG-109940
        # Subject Branch Project Status CR V

            jbornema Joerg Bornemann
            joaijala Johanna Äijälä
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes