Fix modbus client/server examples for missing QtSerialPort

Fixes: QTBUG-109940
Change-Id: I477d0da422ff2f3a35a035620b93d44112f4c802
Reviewed-by: Alexey Edelev <alexey.edelev@qt.io>
(cherry picked from commit cc12e9055ab97332a3709440458a881cb6147af3)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>